# HMPdetector

./: CMakeLists.txt  HMPdetector.cpp  MPU6050.hpp  PEIS.hpp  SensingBracelet.cpp  SensingBracelet.hpp  classifier.cpp  classifier.hpp  creator.cpp  creator.hpp  device.hpp  doxygen_config  doxygen_config~  logfile.hpp  publisher.hpp  utils.cpp  utils.hpp
Models/Letters/: AGMMbody.txt  AGMMgravity.txt  AMuBody.txt  AMuGravity.txt  ASigmaBody.txt  ASigmaGravity.txt  BGMMbody.txt  BGMMgravity.txt  BMuBody.txt  BMuGravity.txt  BSigmaBody.txt  BSigmaGravity.txt  CGMMbody.txt  CGMMgravity.txt  CMuBody.txt  CMuGravity.txt  CSigmaBody.txt  CSigmaGravity.txt  Classifierconfig.txt  DGMMbody.txt  DGMMgravity.txt  DMuBody.txt  DMuGravity.txt  DSigmaBody.txt  DSigmaGravity.txt  HMPconfig.txt  HMPconfig.txt~
Models/Sweden/: Classifierconfig.txt  Classifierconfig.txt~  ClimbGMMbody.txt  ClimbGMMgravity.txt  ClimbMuBody.txt  ClimbMuGravity.txt  ClimbSigmaBody.txt  ClimbSigmaGravity.txt  HMPconfig.txt  HMPconfig.txt~  PickUpDrinkGMMbody.txt  PickUpDrinkGMMgravity.txt  PickUpDrinkMuBody.txt  PickUpDrinkMuGravity.txt  PickUpDrinkSigmaBody.txt  PickUpDrinkSigmaGravity.txt  PickUpGMMbody.txt  PickUpGMMgravity.txt  (+60 more)
Results/: long_test_possibilities.txt  possibilities_climb_2.txt  possibilities_climb_4.txt  possibilities_climb_5.txt  possibilities_climb_7.txt  possibilities_drink_1.txt  possibilities_drink_2.txt  possibilities_drink_3.txt  possibilities_drink_4.txt  possibilities_drink_5.txt  possibilities_drink_6.txt  possibilities_drink_7.txt  possibilities_getup_1.txt  possibilities_getup_10.txt  possibilities_getup_11.txt  possibilities_getup_12.txt  possibilities_getup_13.txt  possibilities_getup_14.txt  possibilities_getup_15.txt  possibilities_getup_2.txt  possibilities_getup_3.txt  possibilities_getup_4.txt  possibilities_getup_5.txt  possibilities_getup_6.txt  possibilities_getup_7.txt  possibilities_getup_8.txt  possibilities_getup_9.txt  possibilities_pour_1.txt  possibilities_pour_2.txt  possibilities_pour_3.txt  possibilities_pour_4.txt  possibilities_pour_5.txt  possibilities_pour_6.txt  possibilities_pour_7.txt  possibilities_sit_1.txt  possibilities_sit_2.txt  possibilities_sit_3.txt  possibilities_sit_4.txt  possibilities_sit_5.txt  possibilities_sit_6.txt  (+16 more)
docs/: Documentation.tex~
libs/: SerialStream.cpp
libs/DspFilters/: CMakeLists.txt  CMakeLists.txt~  Cascade.h  Common.h  Layout.h  Makefile  PoleFilter.cpp  cmake_install.cmake
(+1138 files in other folders)
